[tool.poetry]
name = "qosst-bob"
version = "0.10.0"
description = "Bob submodule of QOSST, containing modules for Bob client, the GUI, the DSP of Bob and parameters estimation."
authors = [
    "Yoann Piétri <Yoann.Pietri@lip6.fr>",
    "Valentina Marulanda Acosta <Valentina.Marulanda-Acosta@lip6.fr>",
    "Ilektra Karakosta-Amarantidou <ilektra.karakostaamarantidou@studenti.unipd.it>",
    "Matteo Schiavon <Matteo.Schiavon@lip6.fr>",
]
exclude = ["qosst_bob/*.npy", "qosst_bob/export/*.npy"]
include = ["qosst_bob/gui/logo.png"]
packages = [{ include = "qosst_bob" }, { include = "qosst_bob/py.typed" }]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/qosst"
repository = "https://github.com/qosst/qosst-bob"
documentation = "https://qosst-bob.readthedocs.io/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Security :: Cryptography",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
qosst-core = "^0.10.0"
qosst-hal = "^0.10.0"
qosst-skr = "^0.10.0"
matplotlib = [
    { version = "^3.5.1", python = ">=3.9, <3.11" },
    { version = "^3.7.1", python = ">=3.11, <3.13" },
]
PySimpleGUI = "^4.57.0 "
scipy = "^1.10"


[tool.poetry.group.dev.dependencies]
myst-parser = "^1.0.0"
sphinx-prompt = "^1.5.0"
sphinx-argparse-cli = "^1.11.0"
setuptools = "^67.6.1"
docstr-coverage = "^2.2.0"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^5.3.0"
pylint = "^2.17.4"
mypy = "^1.3.0"
sphinxcontrib-programoutput = "^0.17"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qosst-bob-gui = "qosst_bob.gui.bobgui:main"
qosst-bob-excess-noise = "qosst_bob.excess_noise:main"
qosst-bob-optimize = "qosst_bob.optimization.commands:main"
qosst-bob-transmittance = "qosst_bob.transmittance:main"
qosst-bob-tools = "qosst_bob.tools.commands:main"
